--- a/app/src/main/res/layout/activity_edit_memorial.xml
+++ b/app/src/main/res/layout/activity_edit_memorial.xml
@@ -50,19 +50,11 @@
 
             </FrameLayout>
 
-            <com.google.android.material.textfield.TextInputLayout
+            <ru.sevostyanov.aiscemetery.views.NameInputView
+                android:id="@+id/name_input_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="ФИО"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-
-                <EditText
-                    android:id="@+id/edit_fio"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="textPersonName"/>
-
-            </com.google.android.material.textfield.TextInputLayout>
+                android:layout_marginBottom="8dp" />
 
             <Button
                 android:id="@+id/button_birth_date"
