--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -40,7 +40,7 @@
 
     <!-- Унифицированная цветовая система для мемориалов -->
     <!-- Основные цвета состояний -->
-    <color name="memorial_draft">#9E9E9E</color>           <!-- Серый для черновиков -->
+    <color name="memorial_draft">#9E9E9E</color>           <!-- Серый для приватных -->
     <color name="memorial_published">#4CAF50</color>       <!-- Зелёный для опубликованных -->
     <color name="memorial_moderation">#FF9800</color>      <!-- Оранжевый для модерации -->
     <color name="memorial_rejected">#F44336</color>        <!-- Красный для отклонённых -->
